--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,8 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "tests",
+    "bower.json",
+    "package.json"
   ]
 }
